package interfaces;

public interface IEmployee {
    public int getSalary();

    public void setSalary(int salary);

    public void calculateSalary();

}
