package interfaces;

public interface IEmployeeWithAllowance extends IEmployee {
    public int getAllowance();

    public void calculateAllowance();
}
