package interfaces;

public interface IMember {

    abstract void generateId(int idNumber);

}
